--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						</div>
 					</header>
 
-				<!-- Menu -->
+				<!-- Menu
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
@@ -46,15 +46,17 @@
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
 					</nav>
-
+ -->
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
 							<header>
 								<h1>Tripp Tuttle</h1>
-								<h2>Search and Reality</h2>
+								<h2>Coming soon!</h2>
+								<h3>Reach out to me <a href="https://twitter.com/tripptuttle">@tripptuttle</a></h3>
+
 							</header>
-							<section class="tiles">
+							<!-- <section class="tiles">
 								<article class="style1">
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
@@ -187,7 +189,7 @@
 										</div>
 									</a>
 								</article>
-							</section>
+							</section> -->
 						</div>
 					</div>
 
