--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 					<footer id="footer">
 						<div class="inner">
 							<section>
-								<h2>Get in touch</h2>
+								<!--- <h2>Get in touch</h2>
 								<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
@@ -213,7 +213,7 @@
 									<ul class="actions">
 										<li><input type="submit" value="Send" class="primary" /></li>
 									</ul>
-								</form>
+								</form> -->
 							</section>
 							<section>
 								<h2>Follow</h2>
