--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								<h1>Tripp Tuttle</h1>
 								<h2>Search and Reality</h2>
 							</header>
-							<section class="tiles">
+							<!--<section class="tiles">
 								<article class="style1">
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
@@ -186,7 +186,7 @@
 										</div>
 									</a>
 								</article>
-							</section>
+							</section>-->
 						</div>
 					</div>
 
@@ -194,7 +194,7 @@
 					<footer id="footer">
 						<div class="inner">
 							<section>
-								<h2>Follow</h2>
+								<h2>Reach Out</h2>
 								<ul class="icons">
 									<li><a href="https://twitter.com/tripptuttle" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://www.linkedin.com/in/tripptuttle" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
