updated homepage and reach out info

--- a/index.html
+++ b/index.html
@@ -4,217 +4,242 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
-	<head>
-		<title>Tripp Tuttle</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
-		<!-- Wrapper -->
-			<div id="wrapper">
+<html lang="en">
+<head>
+    <title>Tripp Tuttle</title>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
+    <link rel="stylesheet" href="assets/css/main.css"/>
+    <noscript>
+        <link rel="stylesheet" href="assets/css/noscript.css"/>
+    </noscript>
+</head>
+<body class="is-preload">
+<!-- Wrapper -->
+<div id="wrapper">
 
-				<!-- Header -->
-					<header id="header">
-						<div class="inner">
+    <!-- Header -->
+    <header id="header">
+        <div class="inner">
 
-							<!-- Logo -->
-								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Tripp Tuttle</span>
-								</a>
+            <!-- Logo -->
+            <a href="index.html" class="logo">
+                <span class="symbol"><img src="images/logo.svg" alt=""/></span><span class="title">Tripp Tuttle</span>
+            </a>
 
-							<!-- Nav -->
-								<nav>
-									<ul>
-										<li><a href="#menu">Menu</a></li>
-									</ul>
-								</nav>
+            <!-- Nav -->
+            <nav>
+                <ul>
+                    <li><a href="#menu">Menu</a></li>
+                </ul>
+            </nav>
 
-						</div>
-					</header>
+        </div>
+    </header>
 
-				<!-- Menu -->
-					<nav id="menu">
-						<h2>Menu</h2>
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="cv.html">CV/Resume</a></li>
-							<li><a href="research.html">research</a></li>
-						</ul>
-					</nav>
+    <!-- Menu -->
+    <nav id="menu">
+        <h2>Menu</h2>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">CV/Resume</a></li>
+            <li><a href="#">Research</a></li>
+        </ul>
+    </nav>
 
-				<!-- Main -->
-					<div id="main">
-						<div class="inner">
-							<header>
-								<h1>Tripp Tuttle</h1>
-								<h2>Search and Reality</h2>
-							</header>
-							<!--<section class="tiles">
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Magna</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Lorem</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Feugiat</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Tempus</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Aliquam</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Veroeros</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="images/pic07.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Ipsum</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic08.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Dolor</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic09.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Nullam</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/pic10.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Ultricies</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/pic11.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Dictum</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images/pic12.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Pretium</h2>
-										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
-										</div>
-									</a>
-								</article>
-							</section>-->
-						</div>
-					</div>
+    <!-- Main -->
+    <div id="main">
+        <div class="inner">
+            <header>
+                <h1>Hi, y&rsquo;all!</h1>
+                <p>
+                    <span class="image left">
+                        <img src="images/headshot-tripp-tuttle.jpg"
+                             alt="Headshot of Tripp Tuttle, looking to the right.">
+                    </span>
+                    I'm currently working towards my Ph.D. at the <a href="https://sils.unc.edu">UNC School of
+                    Information and Library Science</a>. Combining experimental approaches and critical theory, I study
+                    how web search, (meta)data, algorithms, and our cyber-infrastructure affect information credibility
+                    and shape divergent individual or social realities.</p>
+                <p><strong>N.B. This site under development, but would love for you to <a href="#footer">reach out!</a></strong>
+                </p>
+            </header>
+            <!--<section class="tiles">
+                <article class="style1">
+                    <span class="image">
+                        <img src="images/pic01.jpg" alt="" />
+                    </span>
+                    <a href="generic.html">
+                        <h2>Magna</h2>
+                        <div class="content">
+                            <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="style2">
+                    <span class="image">
+                        <img src="images/pic02.jpg" alt="" />
+                    </span>
+                    <a href="generic.html">
+                        <h2>Lorem</h2>
+                        <div class="content">
+                            <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="style3">
+                    <span class="image">
+                        <img src="images/pic03.jpg" alt="" />
+                    </span>
+                    <a href="generic.html">
+                        <h2>Feugiat</h2>
+                        <div class="content">
+                            <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="style4">
+                    <span class="image">
+                        <img src="images/pic04.jpg" alt="" />
+                    </span>
+                    <a href="generic.html">
+                        <h2>Tempus</h2>
+                        <div class="content">
+                            <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="style5">
+                    <span class="image">
+                        <img src="images/pic05.jpg" alt="" />
+                    </span>
+                    <a href="generic.html">
+                        <h2>Aliquam</h2>
+                        <div class="content">
+                            <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="style6">
+                    <span class="image">
+                        <img src="images/pic06.jpg" alt="" />
+                    </span>
+                    <a href="generic.html">
+                        <h2>Veroeros</h2>
+                        <div class="content">
+                            <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="style2">
+                    <span class="image">
+                        <img src="images/pic07.jpg" alt="" />
+                    </span>
+                    <a href="generic.html">
+                        <h2>Ipsum</h2>
+                        <div class="content">
+                            <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="style3">
+                    <span class="image">
+                        <img src="images/pic08.jpg" alt="" />
+                    </span>
+                    <a href="generic.html">
+                        <h2>Dolor</h2>
+                        <div class="content">
+                            <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="style1">
+                    <span class="image">
+                        <img src="images/pic09.jpg" alt="" />
+                    </span>
+                    <a href="generic.html">
+                        <h2>Nullam</h2>
+                        <div class="content">
+                            <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="style5">
+                    <span class="image">
+                        <img src="images/pic10.jpg" alt="" />
+                    </span>
+                    <a href="generic.html">
+                        <h2>Ultricies</h2>
+                        <div class="content">
+                            <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="style6">
+                    <span class="image">
+                        <img src="images/pic11.jpg" alt="" />
+                    </span>
+                    <a href="generic.html">
+                        <h2>Dictum</h2>
+                        <div class="content">
+                            <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                        </div>
+                    </a>
+                </article>
+                <article class="style4">
+                    <span class="image">
+                        <img src="images/pic12.jpg" alt="" />
+                    </span>
+                    <a href="generic.html">
+                        <h2>Pretium</h2>
+                        <div class="content">
+                            <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+                        </div>
+                    </a>
+                </article>
+            </section>-->
+        </div>
+    </div>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<section>
-								<h2>Reach Out</h2>
-								<ul class="icons">
-									<li><a href="https://twitter.com/tripptuttle" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="https://www.linkedin.com/in/tripptuttle" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="mailto:tripp.tuttle@unc.edu" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
-								</ul>
-							</section>
-							<ul class="copyright">
-								<li>&copy; 2019. All rights reserved</li><li>Design by: <a href="http://html5up.net">HTML5 UP</a> and used under a CCA 3.0 license</li>
-							</ul>
-						</div>
-					</footer>
+    <!-- Footer -->
+    <footer id="footer">
+        <div class="inner">
+            <section>
+                <h2>Reach Out</h2>
+                <ul class="icons">
+                    <li><a href="https://twitter.com/tripptuttle" class="icon style2 fa-twitter"><span class="label">Twitter</span></a>
+                    </li>
+                    <li><a href="https://www.linkedin.com/in/tripptuttle" class="icon style2 fa-linkedin"><span
+                            class="label">LinkedIn</span></a></li>
+                    <li><a href="mailto:tripp.tuttle@unc.edu" class="icon style2 fa-envelope-o"><span class="label">Email</span></a>
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs"
+                                                                       content="https://orcid.org/0000-0002-0442-1908"
+                                                                       href="https://orcid.org/0000-0002-0442-1908"
+                                                                       target="orcid.widget" rel="noopener noreferrer"
+                                                                       style="vertical-align:top; border: none"><img
+                        src="https://orcid.org/sites/default/files/images/orcid_32x32.png"
+                        style="width:1em;margin-right:.5em;" alt="ORCID iD icon">orcid.org/0000-0002-0442-1908</a></div>
+            </section>
+            <ul class="copyright">
+                <li>&copy; 2019. All rights reserved</li>
+                <li>Design by: <a href="http://html5up.net">HTML5 UP</a> and used under a CCA 3.0 license</li>
+            </ul>
+        </div>
+    </footer>
 
-			</div>
+</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+<!-- Scripts -->
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/browser.min.js"></script>
+<script src="assets/js/breakpoints.min.js"></script>
+<script src="assets/js/util.js"></script>
+<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
 </html>
