updated homepage and reach out info, added photo

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     I'm currently working towards my Ph.D. at the <a href="https://sils.unc.edu">UNC School of
                     Information and Library Science</a>. Combining experimental approaches and critical theory, I study
                     how web search, (meta)data, algorithms, and our cyber-infrastructure affect information credibility
-                    and shape divergent individual or social realities.</p>
+                    and shape divergent realities.</p>
                 <p><strong>N.B. This site under development, but would love for you to <a href="#footer">reach out!</a></strong>
                 </p>
             </header>
