updated homepage and reach out info, added photo

--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
                 </ul>
             </section>
             <section>
+                <h2>Tripp Tuttle</h2>
                 <div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs"
                                                                        content="https://orcid.org/0000-0002-0442-1908"
                                                                        href="https://orcid.org/0000-0002-0442-1908"
@@ -224,6 +225,7 @@
                                                                        style="vertical-align:top; border: none"><img
                         src="https://orcid.org/sites/default/files/images/orcid_32x32.png"
                         style="width:1em;margin-right:.5em;" alt="ORCID iD icon">orcid.org/0000-0002-0442-1908</a></div>
+                <span class="image"><img src="images/sils-logo.png" alt="UNC School of Information and Library Science (logo)" width="300"></span>
             </section>
             <ul class="copyright">
                 <li>&copy; 2019. All rights reserved</li>
