--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <noscript>
         <link rel="stylesheet" href="assets/css/noscript.css"/>
     </noscript>
+	<link href="https://micro.blog/tripptuttle" rel="me" />
 </head>
 <body class="is-preload">
 <!-- Wrapper -->
