--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <link rel="stylesheet" href="assets/css/main.css"/>
-    <noscript>
+    <meta name="msvalidate.01" content="CC1B790F73217BB1681FAF2CF35F364A" />
+<noscript>
         <link rel="stylesheet" href="assets/css/noscript.css"/>
     </noscript>
 	<link href="https://micro.blog/tripptuttle" rel="me" />
