updating orcid logo

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                                                                        href="https://orcid.org/0000-0002-0442-1908"
                                                                        target="orcid.widget" rel="noopener noreferrer"
                                                                        style="vertical-align:top; border: none"><img
-                        src="https://orcid.org/sites/default/files/images/orcid_32x32.png"
+                        src="images/orcid_32x32.png"
                         style="width:1em;margin-right:.5em;" alt="ORCID iD icon">orcid.org/0000-0002-0442-1908</a></div>
                 <span class="image"><img src="images/sils-logo.png" alt="UNC School of Information and Library Science (logo)" width="300"></span>
             </section>
